crates/telemetry-adapters/tests/snapshots/snapshots_games_v4__wrc_generations_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v4.rs
assertion_line: 171
expression: normalized
---
speed_ms: 25
steering_angle: -0.2
throttle: 0.6
brake: 0.15
clutch: 0
rpm: 5500
max_rpm: 7500
gear: 3
num_gears: 5
lateral_g: 0.9
longitudinal_g: 0.3
vertical_g: 0
slip_ratio: 0.010252533
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0.29999998
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 5
lap: 2
current_lap_time_s: 35.2
best_lap_time_s: 0
last_lap_time_s: 78.3
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.64285713
engine_temp_c: 0
extended:
  rpm_fraction:
    type: Float
    value: 0.73333335
  wheel_speed_fl:
    type: Float
    value: 25
  wheel_speed_fr:
    type: Float
    value: 25
  wheel_speed_rl:
    type: Float
    value: 25
  wheel_speed_rr:
    type: Float
    value: 25
sequence: 0
